# er-helper

./: .gitignore  .gitmodules  Cargo.toml  README.md  README_CN.md  config.example.toml  elden-ring.sln  pixi.toml  python.env.in
crates/er-save/: Cargo.toml
crates/er-save-vm/: Cargo.toml
crates/er-save-vm/src/: lib.rs
crates/er-save-vm/src/util/: regulation.rs  validator.rs
crates/er-save-vm/src/vm/: equipment.rs  events.rs  general.rs  importer.rs  profile_summary.rs  regions.rs  slot.rs  stats.rs  vm.rs
crates/er-save-vm/src/vm/inventory/: add_single.rs  mod.rs
crates/er-save/src/: lib.rs
crates/main/: Cargo.toml
crates/main/src/: main.rs
crates/tauri-app/: package.json  vite.config.ts
crates/tauri-app/src/: App.vue  main.ts
crates/tauri-app/src-tauri/: Cargo.toml
crates/tauri-app/src-tauri/assets/: boss.csv  graces.csv
crates/tauri-app/src-tauri/src/: db.rs  lib.rs  main.rs  save.rs  sync.rs
libs/UnpackHelper/: .gitignore  UnpackHelper.csproj
libs/UnpackHelper/lib/: .gitignore
scripts/: 00-a-patch.py  00-b-gen_typings.py  00-d-python_env.py  01-unpack.py  02-decompress.py  03-gen_assets.py  04-tune.py  _common.py  _utils.py  browse.py  decompress.py  download_icons.py  gen_assets.py  gen_typings.py  init_oodle.sh  pack.py  patch.py  test.py  trans.py  unpack.py  utils.py
src/: main.rs
tauri-app/: package.json  vite.config.ts
tauri-app/assets/: boss.csv  eventflag_bst.csv  goods.csv  grace.csv  weapon.csv
tauri-app/src/: App.vue  main.ts  vite-env.d.ts
tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
tauri-app/src/lib/: db.ts  (+4 more)
(+45 files in other folders)
