[package]
name = "er-save-vm"
version = "0.0.22"
edition = "2021"

[dependencies]
er-save = { path = "../er-save" }
aes = "0.8.4"
binary-reader = "0.4.5"
bitflags = "2.6.0"
cbc = "0.1.2"
encoding_rs = "0.8.34"
once_cell = "1.19.0"
serde = { version = "1.0.209", features = ["derive"] }
zstd = "0.13.2"
strsim = "0.11.1"
